fix: Fixed primary contrast color

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,8 +24,8 @@
   /** primary **/
  --ion-color-primary: #2dd36f;
  --ion-color-primary-rgb: 45,211,111;
- --ion-color-primary-contrast: #000000;
- --ion-color-primary-contrast-rgb: 0,0,0;
+ --ion-color-primary-contrast: #FFF;
+ --ion-color-primary-contrast-rgb: 255,255,255;
  --ion-color-primary-shade: #28ba62;
  --ion-color-primary-tint: #42d77d;
 
